fix(homepage): title text in featured card clipped

--- a/style/home.css
+++ b/style/home.css
@@ -60,7 +60,7 @@
   font-size: 1.75rem;
   line-height: 2.2rem;
   margin-bottom: 1rem;
-  max-height: 5.25rem;
+  max-height: 6.6rem;
 }
 
 .home-page .featured.card .content {
